--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        key: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     steps:
 
     - name: Set up Go 1.13
